# story-shot-backend

./: .gitignore  Readme.md  setup.sql  stack.yaml  story-shot.cabal
app/: Main.hs
src/: Environment.hs  Init.hs  Lib.hs  Utils.hs
src/Class/: Includes.hs  Resource.hs  Versioned.hs
src/Controller/: Author.hs  Basic.hs  Session.hs  Story.hs  Tag.hs  Types.hs  User.hs  Utils.hs
src/Controller/Types/: Author.hs
src/Domain/: Types.hs
src/Domain/Types/: Author.hs
src/Exception/: AppError.hs
src/Resource/: Author.hs  Session.hs  Story.hs  Tag.hs  User.hs
src/Storage/: Author.hs  Repos.hs  Session.hs  Story.hs  Tag.hs  Types.hs  User.hs  Utils.hs
src/Storage/Repos/: Authors.hs
src/Storage/Types/: Author.hs
src/Type/: AppError.hs  Author.hs  Doc.hs  Duration.hs  Genre.hs  Include.hs  Meta.hs  Or.hs  Pagination.hs  Session.hs  Story.hs  StoryAuthor.hs  StoryTag.hs  Tag.hs  User.hs
test/: Spec.hs
