name:                story-shot
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/story-shot#readme
license:             BSD3
license-file:        LICENSE
author:              Sherub Thakur
maintainer:          sherubthakur@gmail.com
copyright:           2016 Sherub Thakur
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Class.Includes
                     , Class.Resource

                     , Init
                     , Environment
                     , Type.Duration
                     , Type.Genre
                     , Type.Story
                     , Type.Tag
                     , Type.Author
                     , Type.User
                     , Type.StoryTag
                     , Type.Pagination
                     , Type.Doc
                     , Type.AppError
                     , Type.Or
                     , Type.Meta

                     , Storage.Utils
                     , Storage.Tag
                     , Storage.Story
                     , Storage.Author
                     , Storage.User

                     , Resource.Tag
                     , Resource.Story
                     , Resource.Author
                     , Resource.User

                     , Controller.Basic
                     , Controller.Tag
                     , Controller.Story
                     , Controller.Author
                     , Controller.User
                     , Controller.Utils

                     , Library.Link

                     , Utils
  build-depends:       base >= 4.7 && < 5
                     -- json parsing library
                     , aeson
                     , unordered-containers
                     , containers
                     , json-api
                     , product-profunctors
                     , opaleye
                     , mtl
                     , time
                     , random-fu
                     , data-default
                     -- The EitherT monad Transformer
                     , either
                     , http-types
                     , MissingH
                     , postgresql-simple
                     , resource-pool
                     , scotty
                     , split
                     -- type level web dsl
                     , transformers
                     , text
                     , text-show
                     -- need to make a web service
                     , wai
                     , wai-extra
                     , wai-cors
                     , warp
                     -- efficient
                     , url
                     , vector
                     , MonadRandom
  default-language:    Haskell2010

executable story-shot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , story-shot
  default-language:    Haskell2010

test-suite story-shot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , story-shot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jckdrpr/story-shot
